--- a/src/ToDoCounter.css
+++ b/src/ToDoCounter.css
@@ -1,6 +1,7 @@
-h1{
+h2{
     font-size: 24px;
     text-align: center;
     margin: 0;
-    padding: 48px,
+    padding: 48px;
+    color: whitesmoke;
 }
