--- a/src/ToDoNav.css
+++ b/src/ToDoNav.css
@@ -3,6 +3,7 @@ h1{
     text-align: left;
     margin: 0;
     padding: 0;
+    color: whitesmoke;
 }
 
 .nav{
@@ -12,5 +13,6 @@ h1{
     padding: 0 40px;
     margin: 0 10px;
     height: 64px;
-    background-color: #fff;
+    background-color: #89b67f
 }
+
