--- a/src/ToDoNav.css
+++ b/src/ToDoNav.css
@@ -1,18 +1,16 @@
-h1{
-    font-size: 24px;
-    text-align: left;
-    margin: 0;
-    padding: 0;
-    color: whitesmoke;
-}
 
 .nav{
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+    width: 80%;
     align-items: center;
-    padding: 0 40px;
-    margin: 0 10px;
-    height: 64px;
+    padding: 16px 0px;
+    margin: 16px;
     background-color: #89b67f
+}
+
+img{
+    width: 140px;
+    height: 140px;
 }
 
