--- a/src/ToDoItem.css
+++ b/src/ToDoItem.css
@@ -1,8 +1,39 @@
-.liToDo{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 10px 20px;
-    padding: 0px;
-    border-bottom: 1px solid #ccc;
+.liToDo {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 10px 20px;
+  padding: 0px;
+  border-bottom: 1px solid #ccc;
+}
+
+.ToDoItem-p--complete {
+  text-decoration: line-through;
+  color: black;
+}
+
+.Icon {
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 48px;
+  width: 48px;
+  font-size: 24px;
+  font-weight: bold;
+  /* background-color: #CCC; */
+}
+
+.Icon-check {
+    position: absolute;
+    left: 12px;
+  }
+
+  .Icon-check--active {
+    color: #3b443b;
+  }
+
+ 
+.Icon-delete:hover {
+  color: red;
 }
