--- a/src/ToDoItem.css
+++ b/src/ToDoItem.css
@@ -9,7 +9,7 @@
 
 .ToDoItem-p--complete {
   text-decoration: line-through;
-  color: black;
+  color: greenyellow;
 }
 
 .Icon {
@@ -25,15 +25,17 @@
 }
 
 .Icon-check {
-    position: absolute;
-    left: 12px;
-  }
+  left: 12px;
+}
 
-  .Icon-check--active {
-    color: #3b443b;
-  }
+.Icon-check--active {
+  color: greenyellow;
+}
 
- 
+.Icon-check:hover {
+  color: greenyellow;
+}
+
 .Icon-delete:hover {
   color: red;
 }
